force-app/main/default/objects/ExternalWebAPI__c/ExternalWebAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Generate File Using External web API</label>
</CustomObject>