force-app/main/default/objects/ExternalWebAPI__c/fields/CreateNewFile__c.field-meta.xml
<CustomField>
    <fullName>CreateNewFile__c</fullName>
    <label>CreateNewFile</label>
    <type>Url</type>
</CustomField>