force-app/main/default/objects/ExternalWebAPI__c/fields/Fetch_TermStore__c.field-meta.xml
<CustomField>
    <fullName>Fetch_TermStore__c</fullName>
    <label>Fetch TermStore</label>
    <type>Url</type>
</CustomField>