force-app/main/default/objects/ExternalWebAPI__c/fields/Update_Item_Author__c.field-meta.xml
<CustomField>
    <fullName>Update_Item_Author__c</fullName>
    <label>Update Item Author</label>
    <type>Url</type>
</CustomField>