force-app/main/default/objects/ExternalWebAPI__c/fields/Upload_File__c.field-meta.xml
<CustomField>
    <fullName>Upload_File__c</fullName>
    <label>Upload File</label>
    <type>Url</type>
</CustomField>